# google-adk-sample-agents

./: .env.example  .gitignore  Dockerfile  README.md  auth_gcp.sh  docker-compose.yml  manage_secrets.sh  pyproject.toml  requirements.txt  retrieve_certs.sh
.github/workflows/: ci-cd.yml  main.yml
agents/: Dockerfile  deploy.json  main.py
agents/vegas_agent/: agent.py
agents/vegas_agent/google_maps_agent/: agent.py
agents/vegas_agent/google_search_agent/: agent.py
agents/weather_agent/: agent.py
terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
tests/: __init__.py  test_main.py
